# test3

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPER_GUIDE.md  Dockerfile  FORK_CHANGES.md  Jenkinsfile  MEMORY.md  QUICK_START.md  README.md  USER_GUIDE.md  claude_desktop_config.json  deploy.sh  example_clusters.yml  example_config.yml  pyproject.toml  start_server.py  test_schema.py  test_skills_fix.py
.github/workflows/: ci.yml  publish-release.yml
integration_tests/: conftest.py
integration_tests/auth/: test_aws_credentials.py  test_aws_profile_cli.py  test_aws_profile_env.py  test_basic_auth.py  test_header_auth.py  test_iam_role.py  test_no_auth.py
integration_tests/concurrency/: conftest.py  test_concurrent_multi_client.py  test_concurrent_single_client.py  test_ramp_load.py  test_sequential_baseline.py
integration_tests/config/: multi_mode.yml.example  test_clusters.yml.example
integration_tests/errors/: test_bad_credentials.py  test_bad_urls.py
integration_tests/framework/: assertions.py  aws_helpers.py  client.py  constants.py  server.py
integration_tests/server_modes/: test_multi_mode.py  test_single_mode.py
integration_tests/tool_filtering/: test_filtering_cli_args.py  test_filtering_env_vars.py  test_filtering_yaml_config.py
integration_tests/tools/: test_cat_nodes_tool.py  test_cluster_health_tool.py  test_count_tool.py  test_data_distribution_tool.py  test_explain_tool.py  test_generic_api_tool.py  test_get_allocation_tool.py  test_get_cluster_state_tool.py  test_get_index_info_tool.py  test_get_index_stats_tool.py  test_get_long_running_tasks_tool.py  test_get_nodes_tool.py  test_get_segments_tool.py  test_get_shards_tool.py  test_index_mapping_tool.py  test_list_index_tool.py  test_log_pattern_analysis_tool.py  test_msearch_tool.py  test_search_index_tool.py
integration_tests/write_protection/: test_write_disabled.py  test_write_enabled.py
k8s/: deployment.yaml  ingress.yaml  mcp-deployment.yaml  mcp-istio.yaml  mcp-service.yaml  namespace.yaml  secret.yaml  service.yaml  setup-cluster.sh
src/mcp_server_opensearch/: __init__.py  __main__.py  clusters_information.py  logging_config.py  sse_server.py  stdio_server.py  streaming_server.py  tool_executor.py
src/opensearch/: client.py  connection.py  dashboards_client.py  helper.py
src/tools/: config.py  exceptions.py  generic_api_tool.py  log_correlation.py  log_correlation_server.py  log_correlation_ui.html  memory_tools.py  skills_tools.py  tool_filter.py  tool_generator.py  tool_logging.py  tool_params.py  tools.py  utils.py
src/tools/agentic_memory/: actions.py  params.py
tests/: conftest.py  mend_scan_smoke_test.py  test_aggregations_tool.py
tests/mcp_server_opensearch/: test_clusters_information.py  test_logging_config.py  test_sse_server.py  test_stdio_server.py  test_streaming_server.py  test_tool_executor.py
tests/opensearch/: test_client.py  test_helper.py  test_response_size_limiting.py
tests/tools/: test_agentic_memory_tools.py  test_async_search_tools.py  test_config.py  test_experiment_tools.py  test_generic_tool.py  test_judgment_tool_evals.py  test_judgment_tools.py  test_memory_tools.py  test_query_set_tools.py  test_skills_tools.py  test_srw_search_tools.py  test_tool_filters.py  test_tool_generator.py  test_tool_logging.py  test_tools.py
